feat(llm_proxy): added a call to store llm call end event
